<resources>
    <string name="app_name">QCarona</string>
    <string name="textologin">Gaste pouco, chegue cedo!</string>
    <string name="title_activity_login">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="userousenhainvalido">Usuário ou senha invalido.</string>

    <string name="nome">Nome:</string>
    <string name="sobrenome">Sobrenome:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="senha2">Senha Novamente:</string>
    <string name="datanasc">Data Nascimento</string>
    <string name="cep">CEP</string>
    <string name="tel">Telefone</string>

    <string name="caronas">Caronas</string>

    <!-- Strings Minha Conta -->
    <string name="olaseuid">Olá seu id é: </string>
    <string name="dialogominhaconta">Gostaria de editar suas informações?</string>
    <string name="sim">Sim!</string>
    <string name="nao">Não</string>
    <string name="suaqualificacao">Sua qualificação é: 2.5</string>
    <string name="editarnome">Você gostaria de editar seu nome?</string>
    <string name="editarsobrenome">Você gostaria de editar seu sobrenome?</string>
    <string name="editardata">Você gostaria de editar sua data de nascimento?</string>
    <string name="editaremail">Você gostaria de editar seu email?</string>
    <string name="editarsenha1">Diga sua nova senha:(Caso não queria editar repita a atual)</string>
    <string name="editarsenha2">Repita a senha:</string>
    <string name="editartel">Você gostaria de editar seu telefone?</string>
    <string name="cancelar">Cancelar!</string>

    <!-- Strings Cadastrar Novo -->
    <string name="bemvindocad">Bem vindo! Qual o seu Nome?</string>
    <string name="qualsobrenome">E qual é o seu Sobrenome?</string>
    <string name="digaemail">Vamos facilitar o contato! Qual o seu Email?</string>
    <string name="digasenha">Sem contar a ninguem! Me diga sua senha?</string>
    <string name="senhanovamente">Confirma a senha ai... Não entendi da primeira vez!</string>
    <string name="digatel">Opa! E se seu celular?</string>
    <string name="digacep">Quase acabando... Qual seu cep?</string>
    <string name="digadata">Só mais esse. Qual a sua data de nascimento?</string>
    <string name="aguardar">Só um momentinho... estou cadastrando você!</string>
    <string name="opserrocad">Ops, Coloque seu nome novamente!</string>

    <string name="proximo">Proximo</string>
    <string name="anterior">Anterior</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (opcional)</string>
    <string name="action_sign_in">Entrar ou cadastrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha muito pequena</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo deve ser preenchido</string>
    <string name="permission_rationale">"As permissões de contatos são necessárias para fornecer o preenchimento de e-mail."
    </string>
    <string name="config_servidor">Servidor</string>

    <!-- Strings tela de amigo -->
    <string name="idamigo">A id do seu amigo é:</string>
    <string name="qualificacaoamigo">A qualificação do seu amigo é:</string>
    <string name="dadosamigo">Os dados do amigo:</string>
    <string name="solicitacoesamigos">Solicitações de amizade:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_area_restrita">AreaRestritaActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Quero Carona</string>
    <string name="amigos">Amigos</string>
    <string name="title_darcarona">Dar Carona</string>
    <string name="title_notifications">Minhas Caronas</string>
    <string name="title_minhaconta">Minha Conta</string>
    <string name="email_pesq">Email amigo</string>
    <string name="btn_email_pesq">Buscar amigo</string>
    <string name="text_origem">Cidade Origem</string>
    <string name="cidade_destino_quero_carona">Cidade Destino</string>
    <string name="btn_text">Verificar</string>
</resources>
